--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "unfetch": "4.2.0",
     "url-parse": "1.5.10",
     "v-tooltip": "2.0.3",
+    "vee-validate": "3",
     "vue-client-only": "2.1.0",
     "vue-clipboard2": "0.3.1",
     "vue-codemirror": "4.0.6",
