--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "clean": "./shell/scripts/clean",
     "lint": "./node_modules/.bin/eslint --max-warnings 0 --ext .js,.ts,.vue .",
     "lint:lib": "cd pkg/rancher-components && yarn lint",
-    "lint-l10n": "./node_modules/.bin/yamllint ./shell/assets/translations",
+    "lint-l10n": "./node_modules/.bin/yamllint ./shell/assets/translations pkg/harvester/l10n",
     "test": "jest --watch",
     "test:ci": "jest --collectCoverage --silent",
     "install:ci": "yarn install --frozen-lockfile",
