--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -9,11 +9,12 @@ on:
       - master
       - 'release-*'
   workflow_dispatch:
-    environment:
-      description: 'Environment to run tests against'
-      type: environment
-      required: true 
-      
+    inputs:
+      environment:
+        description: 'Environment to run tests against'
+        type: environment
+        required: true
+
 env:
   TEST_USERNAME: admin
   TEST_PASSWORD: password
@@ -68,18 +69,15 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14.x'
-      
-      - name: Install packages
-        run: yarn install:ci
       
       - name: Run tests
+        uses: ./.github/actions/unit-tests
+
+      - name: Collect Coverage
         run: |
-          yarn test:ci
           mkdir -p coverage-artifacts/coverage
           cp coverage/unit/coverage-final.json coverage-artifacts/coverage/coverage-unit.json
+          cp -r coverage/unit/ coverage-artifacts/coverage/unit/
 
       - name: Upload coverage
         uses: actions/upload-artifact@v3
@@ -93,15 +91,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14.x'
-      
-      - name: Install packages
-        run: yarn install:ci
-      
-      - name: Run i18n linters
-        run: yarn lint-l10n
+
+      - name: Run i18n lint
+        uses: ./.github/actions/i18n-lint
 
   lint:
     runs-on: ubuntu-latest
@@ -109,17 +101,11 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 1
-      - uses: actions/setup-node@v3
-        with:
-          node-version: '14.x'
-      
-      - name: Install packages
-        run: yarn install:ci
-      
-      - name: Run linters
-        run: yarn lint
 
-  # coverage:
+      - name: Run tests
+        uses: ./.github/actions/lint
+
+# coverage:
   #   if: "!contains( github.event.pull_request.labels.*.name, 'ci/skip-e2e')"
   #   runs-on: ubuntu-latest
   #   needs:
