--- a/.github/workflows/build-and-upload-branch.yaml
+++ b/.github/workflows/build-and-upload-branch.yaml
@@ -2,6 +2,7 @@ name: Build Dashboard (Branch)
 on:
   push:
     branches:
+      - github-actions-*
       - master
       - 'release-*'
       - '*-dev'
