--- a/.github/workflows/build-and-upload-branch.yaml
+++ b/.github/workflows/build-and-upload-branch.yaml
@@ -3,6 +3,7 @@ name: Build Dashboard (Branch)
 on:
   push:
     branches:
+      # dev-only to remove github-actions-*
       - github-actions-*
       - master
       - 'release-*'
