--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -2,11 +2,13 @@ name: Tests
 on:
   push:
     branches:
+      # dev-only to remove github-actions-*
       - github-actions-*
       - master
       - 'release-*'
   pull_request:
     branches:
+      # dev-only to remove github-actions-*
       - github-actions-*
       - master
       - 'release-*'
