--- a/.github/workflows/build-and-upload-release.yaml
+++ b/.github/workflows/build-and-upload-release.yaml
@@ -1,17 +1,12 @@
-name: Build Dashboard (Branch)
-
+name: Build Dashboard (Release)
 on:
   push:
-    branches:
-      # dev-only to remove github-actions-*
-      - github-actions-*
-      - master
-      - 'release-*'
-      - '*-dev'
+    tags:
+      - v[1-9].*
 
 jobs:
   build-validation:
-    name: Build Test
+    name: Validate Code
     uses: ./.github/workflows/build-test.yaml
   build:
     name: Build and Upload Package
@@ -22,7 +17,7 @@ jobs:
       contents: 'read'
       id-token: 'write'
     with:
-      CI_BRANCH: ${{github.ref_name}}
+      CI_BUILD_TAG: ${{github.ref_name}}
   build-and-upload-docker-image:
     name: Build and Upload Docker
     uses: ./.github/workflows/build-and-upload-docker.yaml
@@ -33,4 +28,4 @@ jobs:
       packages: write
       id-token: write
     with:
-      CI_BRANCH: ${{github.ref_name}}
+      CI_BUILD_TAG: ${{github.ref_name}}
