--- a/.github/workflows/build-and-upload-release.yaml
+++ b/.github/workflows/build-and-upload-release.yaml
@@ -14,7 +14,8 @@ jobs:
     needs:
       - build-validation
     permissions:
-      contents: 'read'
-      id-token: 'write'
+      contents: read
+      packages: write
+      id-token: write
     with:
       CI_BUILD_TAG: ${{github.ref_name}}
