--- a/.github/workflows/build-and-upload.yaml
+++ b/.github/workflows/build-and-upload.yaml
@@ -77,7 +77,7 @@ jobs:
       - id: upload-gate
         name: Upload Gate (superseded by a newer build?)
         run: ./scripts/build-upload-gate
-
+  
   #     - name: Get gcs auth
   #       uses: rancher-eio/read-vault-secrets@main
   #       with:
@@ -146,5 +146,60 @@ jobs:
   #           cache-control: no-cache,must-revalidate
   #         process_gcloudignore: false
 
+  build-and-upload-harvester-plugin:
+    name: Build & Upload Harvester Plugin
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
 
-  
+        # Note - Cannot use the setup action here as it uses a different yarn install arg
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '14.x'
+          cache: 'yarn'
+
+      - id: build-pkg
+        name: Build pkg
+        run: ./shell/scripts/ci-build-pkg.sh harvester
+
+      - id: upload-gate
+        name: Upload Gate
+        run: ./scripts/build-upload-gate
+
+      # - name: Get gcs auth
+      #   uses: rancher-eio/read-vault-secrets@main
+      #   with:
+      #     secrets: |
+      #       secret/data/github/repo/${{ github.repository }}/google-auth/rancher/credentials token | GOOGLE_AUTH
+
+      # - name: Apply gcs auth
+      #   # https://github.com/google-github-actions/auth
+      #   uses: 'google-github-actions/auth@v2'
+      #   with:
+      #     credentials_json: "${{ env.GOOGLE_AUTH }}"
+
+      # - name: Upload tar
+      #   uses: 'google-github-actions/upload-cloud-storage@v2'
+      #   with:
+      #     path: ${{steps.build-embedded.outputs.BUILD_EMBEDED_TGZ}}
+      #     # Example - https://releases.rancher.com/harvester-ui/ui/2.8.0.tar.gz
+      #     destination: releases.rancher.com/harvester-ui/${{ env.REPO }}
+      #     parent: false
+      #     headers: |-
+      #       cache-control: no-cache,must-revalidate
+      #     process_gcloudignore: false
+
+
+        # - name: 
+        # pull: default
+        # image: plugins/gcs
+        # settings:
+        #   acl:
+        #   - allUsers:READER
+        #   cache_control: "no-cache,must-revalidate"
+        #   source: dist-pkg/${PKG_TARBALL}
+        #   target: releases.rancher.com/harvester-ui/plugin/${PKG_TARBALL}
+        #   token:
+        #     from_secret: google_auth_key
