--- a/.github/workflows/build-and-upload.yaml
+++ b/.github/workflows/build-and-upload.yaml
@@ -18,6 +18,8 @@ env:
   REPO: ${{github.event.repository.name || ''}}
   # dev-only, to remove registry (use docker hub)
   REGISTRY: ghcr.io
+  # dev-only, test directory name to upload mock test's artifacts; We will remove it from prod urls aftewards
+  TEST_DIR_NAME: test-drone-migration
 
 jobs:
   build-and-upload-docker-image:
@@ -53,8 +55,10 @@ jobs:
       #     provenance: false
       #     context: .
       #     push: true
-      #     # dev-only, to remove registry
-      #     tags: ${{ env.REGISTRY }}/${{ env.GIT_REPO }}:${{ github.ref_name }}
+      #     # dev-only
+      #     tags: ${{ env.GIT_REPO }}/${{ env.TEST_DIR_NAME }}:${{ github.ref_name }}
+      #     # prod
+      #     tags: ${{ env.GIT_REPO }}:${{ github.ref_name }}
 
   build-and-upload-hosted:
     name: Build & Upload Hosted
@@ -97,7 +101,9 @@ jobs:
   #       # https://github.com/google-github-actions/upload-cloud-storage
   #       with:
   #         path: ${{steps.build-hosted.outputs.BUILD_HOSTED_DIR}}
-  #         # Example - https://releases.rancher.com/harvester-ui/ui/2.8.0/...
+  #         # dev-only
+  #         destination: releases.rancher.com/harvester-ui/${{ env.REPO }}/${{ env.TEST_DIR_NAME }}/${{ steps.build-hosted.outputs.BUILD_HOSTED_LOCATION }}
+  #         # prod
   #         destination: releases.rancher.com/harvester-ui/${{ env.REPO }}/${{ steps.build-hosted.outputs.BUILD_HOSTED_LOCATION }}
   #         parent: false
   #         headers: |-
@@ -146,7 +152,9 @@ jobs:
   #       uses: 'google-github-actions/upload-cloud-storage@v2'
   #       with:
   #         path: ${{steps.build-embedded.outputs.BUILD_EMBEDED_TGZ}}
-  #         # Example - https://releases.rancher.com/harvester-ui/ui/2.8.0.tar.gz
+  #         # dev-only
+  #         destination: releases.rancher.com/harvester-ui/${{ env.TEST_DIR_NAME }}/${{ env.REPO }}
+  #         # prod
   #         destination: releases.rancher.com/harvester-ui/${{ env.REPO }}
   #         parent: false
   #         headers: |-
@@ -198,6 +206,9 @@ jobs:
       #   uses: 'google-github-actions/upload-cloud-storage@v2'
       #   with:
       #     path: ${{steps.ci-build-pkg.outputs.PKG_TARBALL}}
+      #     # dev-only
+      #     destination: releases.rancher.com/harvester-ui/plugin/${{ env.TEST_DIR_NAME }}/${{steps.ci-build-pkg.outputs.PKG_TARBALL}}
+      #     # prod
       #     destination: releases.rancher.com/harvester-ui/plugin/${{steps.ci-build-pkg.outputs.PKG_TARBALL}}
       #     parent: false
       #     headers: |-
@@ -208,12 +219,14 @@ jobs:
       #   uses: 'google-github-actions/upload-cloud-storage@v2'
       #   with:
       #     path: ${{steps.ci-build-pkg.outputs.PKG_NAME}}
+      #     # dev-only
+      #     destination: releases.rancher.com/harvester-ui/plugin/${{ env.TEST_DIR_NAME }}/${{steps.ci-build-pkg.outputs.PKG_NAME}}
+      #     # prod
       #     destination: releases.rancher.com/harvester-ui/plugin/${{steps.ci-build-pkg.outputs.PKG_NAME}}
       #     parent: false
       #     headers: |-
       #       cache-control: no-cache,must-revalidate
       #     process_gcloudignore: false
-
       
   # dev-only
   # PKG_TARBALL, PKG_NAME
