--- a/.github/workflows/build-and-upload.yaml
+++ b/.github/workflows/build-and-upload.yaml
@@ -16,8 +16,6 @@ env:
   GIT_REPO: ${{github.repository}}
   GIT_COMMIT: ${{github.sha}}
   REPO: ${{github.event.repository.name || ''}}
-  # dev-only, to remove registry (use docker hub)
-  REGISTRY: ghcr.io
   # dev-only, test directory name to upload mock test's artifacts; We will remove it from prod urls aftewards
   TEST_DIR_NAME: test-drone-migration
 
@@ -38,27 +36,29 @@ jobs:
         name: Upload Gate
         run: ./scripts/build-upload-gate
 
+      - id: read-docker-secrets
+        name: Read Docker Secrets
+        uses: rancher-eio/read-vault-secrets@main
+        with:
+          secrets: |
+            secret/data/github/repo/${{ github.repository }}/dockerhub/harvester/credentials username | DOCKER_USERNAME ;
+            secret/data/github/repo/${{ github.repository }}/dockerhub/harvester/credentials password | DOCKER_PASSWORD ;
+
       - id: login-docker
         name: Docker Log in
         uses: docker/login-action@v3
         with:
-          # dev-only, to remove registry
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ env.DOCKER_USERNAME }}
+          password: ${{ env.DOCKER_PASSWORD }}
 
-      ## dev-only disabled
-      # - id: push-docker
-      #   name: Docker Build
-      #   uses: docker/build-push-action@v5
-      #   with:
-      #     provenance: false
-      #     context: .
-      #     push: true
-      #     # dev-only
-      #     tags: ${{ env.GIT_REPO }}/${{ env.TEST_DIR_NAME }}:${{ github.ref_name }}
-      #     # prod
-      #     tags: ${{ env.GIT_REPO }}:${{ github.ref_name }}
+      - id: push-docker
+        name: Docker Build
+        uses: docker/build-push-action@v5
+        with:
+          provenance: false
+          context: .
+          push: true
+          tags: rancher/harvester-ui:${{ github.ref_name }}
 
   build-and-upload-hosted:
     name: Build & Upload Hosted
