--- a/.github/workflows/build-and-upload.yaml
+++ b/.github/workflows/build-and-upload.yaml
@@ -83,32 +83,28 @@ jobs:
         name: Upload Gate (superseded by a newer build?)
         run: ./scripts/build-upload-gate
 
-  ## dev-only disabled
-  #     - name: Get gcs auth
-  #       uses: rancher-eio/read-vault-secrets@main
-  #       with:
-  #         secrets: |
-  #           secret/data/github/repo/${{ github.repository }}/google-auth/rancher/credentials token | GOOGLE_AUTH
+      - name: Get gcs auth
+        uses: rancher-eio/read-vault-secrets@main
+        with:
+          secrets: |
+            secret/data/github/repo/${{ github.repository }}/googleauthkey/harvester/credentials credential | GOOGLE_AUTH ;
 
-  #     - name: Apply gcs auth
-  #       # https://github.com/google-github-actions/auth
-  #       uses: 'google-github-actions/auth@v2'
-  #       with:
-  #         credentials_json: "${{ env.GOOGLE_AUTH }}"
+      - name: Apply gcs auth
+        # https://github.com/google-github-actions/auth
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: "${{ env.GOOGLE_AUTH }}"
 
-  #     - name: Upload build
-  #       uses: 'google-github-actions/upload-cloud-storage@v2'
-  #       # https://github.com/google-github-actions/upload-cloud-storage
-  #       with:
-  #         path: ${{steps.build-hosted.outputs.BUILD_HOSTED_DIR}}
-  #         # dev-only
-  #         destination: releases.rancher.com/harvester-ui/${{ env.REPO }}/${{ env.TEST_DIR_NAME }}/${{ steps.build-hosted.outputs.BUILD_HOSTED_LOCATION }}
-  #         # prod
-  #         destination: releases.rancher.com/harvester-ui/${{ env.REPO }}/${{ steps.build-hosted.outputs.BUILD_HOSTED_LOCATION }}
-  #         parent: false
-  #         headers: |-
-  #           cache-control: no-cache,must-revalidate
-  #         process_gcloudignore: false
+      - name: Upload build
+        uses: 'google-github-actions/upload-cloud-storage@v2'
+        # https://github.com/google-github-actions/upload-cloud-storage
+        with:
+          path: ${{steps.build-hosted.outputs.BUILD_HOSTED_DIR}}
+          destination: releases.rancher.com/harvester-ui/dashboard/${{ steps.build-hosted.outputs.BUILD_HOSTED_LOCATION }}
+          parent: false
+          headers: |-
+            cache-control: no-cache,must-revalidate
+          process_gcloudignore: false
 
   # dev-only
   # BUILD_HOSTED_LOCATION
