--- a/.github/workflows/build-and-upload.yaml
+++ b/.github/workflows/build-and-upload.yaml
@@ -106,10 +106,6 @@ jobs:
             cache-control: no-cache,must-revalidate
           process_gcloudignore: false
 
-  # dev-only
-  # BUILD_HOSTED_LOCATION
-  # - should test for 'latest'
-
   build-and-upload-embedded:
     name: Build & Upload Embedded
     runs-on: ubuntu-latest
@@ -131,33 +127,29 @@ jobs:
         env:
           DISABLED_EMBED_PKG: https://releases.rancher.com/harvester-ui/plugin/harvester-1.0.3.tar.gz
 
-  ## dev-only disabled
-  #     - name: Get gcs auth
-  #       uses: rancher-eio/read-vault-secrets@main
-  #       with:
-  #         secrets: |
-  #           secret/data/github/repo/${{ github.repository }}/google-auth/rancher/credentials token | GOOGLE_AUTH
+      - name: Get gcs auth
+        uses: rancher-eio/read-vault-secrets@main
+        with:
+          secrets: |
+            secret/data/github/repo/${{ github.repository }}/googleauthkey/harvester/credentials credential | GOOGLE_AUTH ;
 
-  #     - name: Apply gcs auth
-  #       # https://github.com/google-github-actions/auth
-  #       uses: 'google-github-actions/auth@v2'
-  #       with:
-  #         credentials_json: "${{ env.GOOGLE_AUTH }}"
+      - name: Apply gcs auth
+        # https://github.com/google-github-actions/auth
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: "${{ env.GOOGLE_AUTH }}"
 
-  #     - name: Upload tar
-  #       uses: 'google-github-actions/upload-cloud-storage@v2'
-  #       with:
-  #         path: ${{steps.build-embedded.outputs.BUILD_EMBEDED_TGZ}}
-  #         # dev-only
-  #         destination: releases.rancher.com/harvester-ui/${{ env.TEST_DIR_NAME }}/${{ env.REPO }}
-  #         # prod
-  #         destination: releases.rancher.com/harvester-ui/${{ env.REPO }}
-  #         parent: false
-  #         headers: |-
-  #           cache-control: no-cache,must-revalidate
-  #         process_gcloudignore: false
+      - name: Upload tar
+        uses: 'google-github-actions/upload-cloud-storage@v2'
+        with:
+          path: ${{steps.build-embedded.outputs.BUILD_EMBEDED_TGZ}}
+          destination: releases.rancher.com/harvester-ui/${{ env.REPO }}
+          parent: false
+          headers: |-
+            cache-control: no-cache,must-revalidate
+          process_gcloudignore: false
 
-  # dev-only
+# dev-only
   # BUILD_EMBEDED_TGZ
   # - should test for 'latest', tags, and branches
   # env.REPO
