--- a/.github/workflows/build-and-upload.yaml
+++ b/.github/workflows/build-and-upload.yaml
@@ -11,13 +11,14 @@ on:
         type: string
 
 env:
+  GOOGLE_AUTH: ''
+  DOCKER_USERNAME: ''
+  DOCKER_PASSWORD: ''
   CI_BUILD_TAG: ${{inputs.CI_BUILD_TAG}}
   CI_BRANCH: ${{inputs.CI_BRANCH}}
   GIT_REPO: ${{github.repository}}
   GIT_COMMIT: ${{github.sha}}
   REPO: ${{github.event.repository.name || ''}}
-  # dev-only, test directory name to upload mock test's artifacts; We will remove it from prod urls aftewards
-  TEST_DIR_NAME: test-drone-migration
 
 jobs:
   build-and-upload-docker-image:
@@ -149,14 +150,8 @@ jobs:
             cache-control: no-cache,must-revalidate
           process_gcloudignore: false
 
-# dev-only
-  # BUILD_EMBEDED_TGZ
-  # - should test for 'latest', tags, and branches
-  # env.REPO
-  # - should test for 'latest', tags, and branches
-
   build-and-upload-harvester-plugin:
-    name: Build & Upload Harvester Plugin
+    name: Build & Upload Plugin
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -177,50 +172,34 @@ jobs:
         name: Upload Gate
         run: ./scripts/build-upload-gate
 
-      ## dev-only disabled
-      # - name: Get gcs auth
-      #   uses: rancher-eio/read-vault-secrets@main
-      #   with:
-      #     secrets: |
-      #       secret/data/github/repo/${{ github.repository }}/google-auth/rancher/credentials token | GOOGLE_AUTH
+      - name: Get gcs auth
+        uses: rancher-eio/read-vault-secrets@main
+        with:
+          secrets: |
+            secret/data/github/repo/${{ github.repository }}/googleauthkey/harvester/credentials credential | GOOGLE_AUTH ;
 
-      # - name: Apply gcs auth
-      #   # https://github.com/google-github-actions/auth
-      #   uses: 'google-github-actions/auth@v2'
-      #   with:
-      #     credentials_json: "${{ env.GOOGLE_AUTH }}"
+      - name: Apply gcs auth
+        # https://github.com/google-github-actions/auth
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: "${{ env.GOOGLE_AUTH }}"
 
-      # - name: Upload plugin tar
-      #   uses: 'google-github-actions/upload-cloud-storage@v2'
-      #   with:
-      #     path: ${{steps.ci-build-pkg.outputs.PKG_TARBALL}}
-      #     # dev-only
-      #     destination: releases.rancher.com/harvester-ui/plugin/${{ env.TEST_DIR_NAME }}/${{steps.ci-build-pkg.outputs.PKG_TARBALL}}
-      #     # prod
-      #     destination: releases.rancher.com/harvester-ui/plugin/${{steps.ci-build-pkg.outputs.PKG_TARBALL}}
-      #     parent: false
-      #     headers: |-
-      #       cache-control: no-cache,must-revalidate
-      #     process_gcloudignore: false
+      - name: Upload plugin tar
+        uses: 'google-github-actions/upload-cloud-storage@v2'
+        with:
+          path: dist-pkg/${{steps.ci-build-pkg.outputs.PKG_TARBALL}}
+          destination: releases.rancher.com/harvester-ui/plugin
+          parent: false
+          headers: |-
+            cache-control: no-cache,must-revalidate
+          process_gcloudignore: false
 
-      # - name: Upload plugin directory
-      #   uses: 'google-github-actions/upload-cloud-storage@v2'
-      #   with:
-      #     path: ${{steps.ci-build-pkg.outputs.PKG_NAME}}
-      #     # dev-only
-      #     destination: releases.rancher.com/harvester-ui/plugin/${{ env.TEST_DIR_NAME }}/${{steps.ci-build-pkg.outputs.PKG_NAME}}
-      #     # prod
-      #     destination: releases.rancher.com/harvester-ui/plugin/${{steps.ci-build-pkg.outputs.PKG_NAME}}
-      #     parent: false
-      #     headers: |-
-      #       cache-control: no-cache,must-revalidate
-      #     process_gcloudignore: false
-      
-  # dev-only
-  # PKG_TARBALL, PKG_NAME
-  # - should be tested for 'latest' and branches, and tags;
-  # - should contain branch name or tag name, depending on shell/scripts/ci-build-pkg.sh output
-
-  # PKG_TAG_TARBALL, PKG_TAG_VERSION
-  # - they are not used, based on shell/scripts/ci-build-pkg.sh output;
-  # - To be erified
+      - name: Upload plugin directory
+        uses: 'google-github-actions/upload-cloud-storage@v2'
+        with:
+          path: dist-pkg/${{steps.ci-build-pkg.outputs.PKG_NAME}}
+          destination: releases.rancher.com/harvester-ui/plugin/${{steps.ci-build-pkg.outputs.PKG_NAME}}
+          parent: false
+          headers: |-
+            cache-control: no-cache,must-revalidate
+          process_gcloudignore: false
