--- a/.github/workflows/build-and-upload.yaml
+++ b/.github/workflows/build-and-upload.yaml
@@ -107,48 +107,48 @@ jobs:
             cache-control: no-cache,must-revalidate
           process_gcloudignore: false
 
-  # build-and-upload-embedded:
-  #   name: Build & Upload Embedded
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: 1
+  build-and-upload-embedded:
+    name: Build & Upload Embedded
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
 
-  #       # Note - Cannot use the setup action here as it uses a different yarn install arg
-  #     - uses: actions/setup-node@v3
-  #       with:
-  #         node-version: '14.x'
-  #         cache: 'yarn'
+        # Note - Cannot use the setup action here as it uses a different yarn install arg
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '14.x'
+          cache: 'yarn'
 
-  #       # Build a tar that will be picked up by rancher builds and embedded into it
-  #     - id: build-embedded
-  #       name: Build Embedded
-  #       run: ./scripts/build-embedded
-  #       env:
-  #         DISABLED_EMBED_PKG: https://releases.rancher.com/harvester-ui/plugin/harvester-1.0.3.tar.gz
+        # Build a tar that will be picked up by rancher builds and embedded into it
+      - id: build-embedded
+        name: Build Embedded
+        run: ./scripts/build-embedded
+        env:
+          DISABLED_EMBED_PKG: https://releases.rancher.com/harvester-ui/plugin/harvester-1.0.3.tar.gz
 
-  #     - name: Get gcs auth
-  #       uses: rancher-eio/read-vault-secrets@main
-  #       with:
-  #         secrets: |
-  #           secret/data/github/repo/${{ github.repository }}/googleauthkey/harvester/credentials credential | GOOGLE_AUTH ;
+      - name: Get gcs auth
+        uses: rancher-eio/read-vault-secrets@main
+        with:
+          secrets: |
+            secret/data/github/repo/${{ github.repository }}/googleauthkey/harvester/credentials credential | GOOGLE_AUTH ;
 
-  #     - name: Apply gcs auth
-  #       # https://github.com/google-github-actions/auth
-  #       uses: 'google-github-actions/auth@v2'
-  #       with:
-  #         credentials_json: "${{ env.GOOGLE_AUTH }}"
+      - name: Apply gcs auth
+        # https://github.com/google-github-actions/auth
+        uses: 'google-github-actions/auth@v2'
+        with:
+          credentials_json: "${{ env.GOOGLE_AUTH }}"
 
-  #     - name: Upload tar
-  #       uses: 'google-github-actions/upload-cloud-storage@v2'
-  #       with:
-  #         path: ${{steps.build-embedded.outputs.BUILD_EMBEDED_TGZ}}
-  #         destination: releases.rancher.com/harvester-ui/${{ env.REPO }}
-  #         parent: false
-  #         headers: |-
-  #           cache-control: no-cache,must-revalidate
-  #         process_gcloudignore: false
+      - name: Upload tar
+        uses: 'google-github-actions/upload-cloud-storage@v2'
+        with:
+          path: ${{steps.build-embedded.outputs.BUILD_EMBEDED_TGZ}}
+          destination: releases.rancher.com/harvester-ui/${{ env.REPO }}
+          parent: false
+          headers: |-
+            cache-control: no-cache,must-revalidate
+          process_gcloudignore: false
 
   # build-and-upload-harvester-plugin:
   #   name: Build & Upload Plugin
