Update the actions/setup description
Signed-off-by: Francesco Torchia <francesco.torchia@suse.com>
(cherry picked from commit ab990d68e573c4c2430bcfaee96e99627039e1a9)

--- a/.github/actions/setup/action.yaml
+++ b/.github/actions/setup/action.yaml
@@ -1,5 +1,5 @@
 name: Setup UI Env
-description: Setup node, python and call bootstrap script
+description: Setup node and call bootstrap script
 
 runs:
   using: 'composite'
