--- a/shell/package.json
+++ b/shell/package.json
@@ -55,6 +55,7 @@
     "babel-plugin-module-resolver": "4.0.0",
     "babel-preset-vue": "2.0.2",
     "browser-env": "3.3.0",
+    "clipboard-polyfill": "4.0.1",
     "cookie": "0.5.0",
     "cookie-universal-nuxt": "2.1.4",
     "core-js": "3.21.1",
@@ -122,7 +123,6 @@
     "url-parse": "1.5.10",
     "v-tooltip": "2.0.3",
     "vue": "2.7.14",
-    "vue-clipboard2": "0.3.1",
     "vue-codemirror": "4.0.6",
     "vue-js-modal": "1.3.35",
     "vue-resize": "0.4.5",
