--- a/package.json
+++ b/package.json
@@ -66,10 +66,11 @@
     "ansi_up": "5.0.0",
     "babel-plugin-module-resolver": "4.0.0",
     "browser-env": "3.3.0",
+    "clipboard-polyfill": "4.0.1",
     "cookie": "0.5.0",
     "cookie-universal-nuxt": "2.1.4",
-    "cron-validator": "1.2.0",
-    "cronstrue": "1.95.0",
+    "cron-validator": "1.3.1",
+    "cronstrue": "2.50.0",
     "cross-env": "6.0.3",
     "d3": "7.3.0",
     "d3-selection": "1.4.1",
@@ -113,7 +114,6 @@
     "url-parse": "1.5.10",
     "v-tooltip": "2.0.3",
     "vue-client-only": "2.1.0",
-    "vue-clipboard2": "0.3.1",
     "vue-codemirror": "4.0.6",
     "vue-js-modal": "1.3.35",
     "vue-meta": "2.4.0",
