Add node version in build-extension-charts.yml
Signed-off-by: Francesco Torchia <francesco.torchia@suse.com>

--- a/.github/workflows/build-extension-charts.yml
+++ b/.github/workflows/build-extension-charts.yml
@@ -50,6 +50,7 @@ jobs:
         with:
           node-version: '20'
           cache: yarn
+          node-version-file: '.nvmrc'
 
       - name: Install dependencies
         run: yarn
