--- a/package.json
+++ b/package.json
@@ -131,7 +131,8 @@
     "xterm-addon-search": "0.10.0",
     "xterm-addon-web-links": "0.7.0",
     "xterm-addon-webgl": "0.13.0",
-    "yaml": "2.0.0"
+    "yaml": "2.0.0",
+    "node-polyfill-webpack-plugin": "3.0.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-optional-chaining": "7.14.5",
@@ -151,7 +152,7 @@
     "@types/vue-select": "3.16.0",
     "@typescript-eslint/eslint-plugin": "4.33.0",
     "@typescript-eslint/parser": "4.33.0",
-    "@vue/cli-service": "4.5.18",
+    "@vue/cli-service": "5.0.8",
     "@vue/eslint-config-standard": "5.1.2",
     "@vue/test-utils": "1.2.1",
     "@vue/vue2-jest": "27.0.0",
@@ -197,7 +198,7 @@
     "yarn": "1.22.18"
   },
   "resolutions": {
-    "**/webpack": "4",
+    "**/webpack": "5",
     "ejs": "^3.1.7",
     "json5": ">=2.2.2",
     "d3-color": ">=3.1.0",
