add v1.4 label in mergify.yaml
Signed-off-by: andy.lee <andy.lee@suse.com>

--- a/.github/mergify.yml
+++ b/.github/mergify.yml
@@ -15,6 +15,7 @@ pull_request_rules:
 - name: Automatically open backport PR to release-harvester-v1.4
   conditions:
     - base=master
+    - label="Require backport v1.4"
   actions:
     backport:
       branches:
